fix: keep logo mark visible in dark theme

--- a/src/components/layout/Header/Header.module.scss
+++ b/src/components/layout/Header/Header.module.scss
@@ -28,6 +28,7 @@
   width: 32px;
   height: 32px;
   flex-shrink: 0;
+  color: #111827;
   transition: transform 0.28s ease;
 }
 
